--- a/menu.html
+++ b/menu.html
@@ -23,7 +23,10 @@
  		<div class="home-photo"><img src="img/logo.png" alt="Sauced Tacos"></div>
  		<div class="home-text">
  			<h1>Welcome to Sauced Tacos</h1>
- 			<p>gfhdhgdhghfghtyhjtyjtyjytydydhj</p>
+ 			<p>fISH Tacos 5.99</p>
+			<p>Chicken Tacos 5.99</p>
+			<p>Shrimp Tacos 5.99</p>
+			<p>Beef tacos 5.99</p>
 
  		</div>
  		<div class="clear"></div>
