--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
  	<section class="main">
  		<div class="container">
- 		<div class="home-photo"><img src="img/logo.png" alt="Sauced Tacos"></div>
+ 		<div class="home-photo"><img src="img/the-building.jpg" alt="Sauced Tacos"></div>
  		<div class="home-text">
  			<h1>Welcome to Sauced Tacos</h1>
  			<p>gfhdhgdhghfghtyhjtyjtyjytydydhj</p>
