--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
 
  	<section class="main">
  		<div class="container">
- 		<div class="home-photo"><img src="img/logo.png" alt="Sauced Tacos"></div>
+ 		<div class="home-photo"><img src="img/sauced-tacos.jpg" alt="Sauced Tacos"></div>
  		<div class="home-text">
  			<h1>Welcome to Sauced Tacos</h1>
  			<p>Here at Sauced Tacos we care about you. Sauced Tacos puts time and effort into quality over quanity and make it right for you. The company only hires the best and we train the best and we train the best to bring you a testy trip to Sauced Tacos, and best Tacos ever had. Sauced Tacos takes pride in the best and we won't rest until you have Sauced Tacos love in your chest.</p>
