--- a/menu.html
+++ b/menu.html
@@ -20,7 +20,7 @@
 
  	<section class="main">
  		<div class="container">
- 		<div class="home-photo"><img src="img/logo.png" alt="Sauced Tacos"></div>
+ 		<div class="home-photo"><img src="img/chicken-tacos.jpg" alt="Sauced Tacos"></div>
  		<div class="home-text">
  			<h1>Welcome to Sauced Tacos</h1>
  			<p>fISH Tacos 5.99</p>
